[package]
name = "causson"
version = "0.1.0"
authors = ["Ash Wolf <ninji@wuffs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
symbol = "0.1.7"
gtk = "0.8.1"
gio = "0.8.1"
paste = "0.1"

